feat: added user CRUD restful api
